[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sickle"
version = "4.0.1"
author = "Milton Valencia (wetw0rk)"
requires-python = ">=3"
dependencies = [
    "keystone-engine>=0.9.2",
    "capstone>=3.0.5"
]

[project.scripts]
sickle = "sickle.__main__:entry"
