[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sickle"
version = "4.0.1"
description = "Payload development framework"
readme = "README.md"
authors = [
  { name = "Milton Valencia (wetw0rk)" }
]
requires-python = ">=3.6"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/wetw0rk/Sickle"

[project.scripts]
sickle = "sickle.__main__:entry"
